vm-3tier-sql-ha-1-nsg.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "storage-settings": {
            "type": "object",
            "metadata": {
                "description": "These are settings for the Storage Account"
            }
        },
        "vnet-settings": {
            "type": "object",
            "metadata": {
                "description": "These are settings for the Virtual Network"
            }
        },
        "pip-settings": {
            "type": "object",
            "metadata": {
                "description": "These are settings for the Public IP Address"
            }
        },
        "lb-settings": {
            "type": "object",
            "metadata": {
                "description": "These are settings for the load balancers"
            }
        },
        "vm-settings": {
            "type": "object",
            "metadata": {
                "description": "These are settings for the Virtual Machine"
            }
        },
        "dc-settings": {
            "type": "object",
            "metadata": {
                "description": "These are settings for Domain Controllers"
            }
        },

        "sql-settings": {
            "type": "object",
            "metadata": {
                "description": "These are settings for the Storage Account"
            }
        },
        "baseUrl": {
            "type": "string",
            "metadata": {
                "description": "Base URL for Resource and Shared Templates"
            }
        }
    },
    "variables": {
        "templatesFolder": "templates/feature-pattern-3",
        "dscScriptsFolder": "dsc-scripts/feature-pattern-3",
        "resourcesFolder": "resources/feature-pattern-3",
        "dscScriptsUrl": "[concat(parameters('baseUrl'), variables('dscScriptsFolder'))]",
        "resourcesUrl": "[concat(parameters('baseUrl'), variables('resourcesFolder'))]",
        "avsTemplate": "[concat(parameters('baseUrl'), variables('templatesFolder'), '/', 'vm-3tier-sql-ha-1-avs.json')]",
        "lbTemplate": "[concat(parameters('baseUrl'), variables('templatesFolder'), '/', 'vm-3tier-sql-ha-1-lb.json')]",
        "nicTemplate": "[concat(parameters('baseUrl'), variables('templatesFolder'), '/', 'vm-3tier-sql-ha-1-nic.json')]",
        "nsgTemplate": "[concat(parameters('baseUrl'), variables('templatesFolder'), '/', 'vm-3tier-sql-ha-1-nsg.json')]",
        "storageTemplate": "[concat(parameters('baseUrl'), variables('templatesFolder'), '/', 'vm-3tier-sql-ha-1-storage.json')]",
        "vmTemplate": "[concat(parameters('baseUrl'), variables('templatesFolder'), '/', 'vm-3tier-sql-ha-1-vm.json')]",
        "diagTemplate": "[concat(parameters('baseUrl'), 'extn-diag.template.json')]",
        "dscTemplate": "[concat(variables('resourcesUrl'), '/', 'extn-dsc.template.json')]",
        "pipTemplate": "[concat(variables('resourcesUrl'), '/pip-', parameters('pip-settings').newOrExisting, '.template.json')]",
        "scriptTemplate": "[concat(variables('resourcesUrl'), '/', 'extn-script.template.json')]",
        "vnetTemplate": "[concat(variables('resourcesUrl'), '/vnet-', parameters('vnet-settings').newOrExisting, '.template.json')]",
        "dcCount": 2,
        "bizLbBackendPoolName": "bizLb-backEnd",
        "bizLbID": "[resourceId('Microsoft.Network/loadBalancers', variables('bizLbName'))]",
        "bizLbName": "bizLb",
        "bizLbProbeName": "biz-probe",
        "bizLbRuleName": "lb-rule-biz",
        "extLbBackendPoolID": "[concat(variables('extLbID'),'/backendAddressPools/', variables('extLbBackendPoolName'))]",
        "extLbBackendPoolName": "extLb-backEnd-http",
        "extLbBackendPort": 3389,
        "extLbID": "[resourceId('Microsoft.Network/loadBalancers', variables('extLbName'))]",
        "extLbName": "extLb",
        "extLbProbeName": "http-probe",
        "extLbRuleName": "lb-rule-http",
        "math": {
            "modulo2": [ 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1 ],
            "modulo3": [ 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2 ]
        },
        "pipName": "web-pip",
        "sqlLbBackendPoolName": "sqlLb-backEnd",
        "sqlLbID": "[resourceId('Microsoft.Network/loadBalancers', variables('sqlLbName'))]",
        "sqlLbName": "sqlLb",
        "sqlLbProbeName": "sql-probe",
        "sqlLbRuleName": "lb-rule-sql",
        "vmNamePrefix": "web-vm-",
        "vmOS": [
            [ "MicrosoftWindowsServer", "WindowsServer", "2016-Datacenter", "windows" ],
            [ "Canonical", "UbuntuServer", "16.04-LTS", "linux" ],
            [ "MicrosoftSQLServer", "SQL2016SP1-WS2016", "Enterprise", "windows" ]
        ],
        "vmDiag": [
            [ "iaas-diagnostic", "Microsoft.Azure.Diagnostics", "IaaSDiagnostics", "1.8" ],
            [ "linux-diagnostic", "Microsoft.OSTCExtensions", "LinuxDiagnostic", "2.3" ]
        ],
        "vmDscScript": [
            [ "dsc-iis", "Microsoft.Powershell", "DSC", "2.9", "[variables('dscTemplate')]", "[variables('dscScriptsUrl')]", "iis-on-windows-vm", "iis-config-dsc", "Main" ],
            [ "script-apache", "Microsoft.Azure.Extensions", "CustomScript", "2.0", "[variables('scriptTemplate')]", "[variables('dscScriptsUrl')]", "apache2-on-ubuntu-vm", "install_apache.sh", null ]
        ]
    },
    "resources": [
        {
            "name": "storageAccounts",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2016-09-01",
            "dependsOn": [],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[variables('storageTemplate')]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "storage-settings": {
                        "value": "[parameters('storage-settings')]"
                    },
                    "baseUrl": {
                        "value": "[parameters('baseUrl')]"
                    }
                }
            }
        },
        {
            "name": "virtualNetwork",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2016-09-01",
            "dependsOn": [],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[variables('vnetTemplate')]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "vnet-settings": {
                        "value": {
                            "name": "[parameters('vnet-settings').name]",
                            "newOrExisting": "[parameters('vnet-settings').newOrExisting]",
                            "existingRg": "[parameters('vnet-settings').existingRg]",
                            "prefix": "[parameters('vnet-settings').prefix]",
                            "subnets": [
                                {
                                    "name": "[parameters('vnet-settings').subnets.subnet0Name]",
                                    "properties": {
                                        "addressPrefix": "[parameters('vnet-settings').subnets.subnet0Prefix]"
                                    }
                                },
                                {
                                    "name": "[parameters('vnet-settings').subnets.subnet1Name]",
                                    "properties": {
                                        "addressPrefix": "[parameters('vnet-settings').subnets.subnet1Prefix]"
                                    }
                                },
                                {
                                    "name": "[parameters('vnet-settings').subnets.subnet2Name]",
                                    "properties": {
                                        "addressPrefix": "[parameters('vnet-settings').subnets.subnet2Prefix]"
                                    }
                                },
                                {
                                    "name": "[parameters('vnet-settings').subnets.subnet3Name]",
                                    "properties": {
                                        "addressPrefix": "[parameters('vnet-settings').subnets.subnet3Prefix]"
                                    }
                                },
                                {
                                    "name": "[parameters('vnet-settings').subnets.subnet4Name]",
                                    "properties": {
                                        "addressPrefix": "[parameters('vnet-settings').subnets.subnet4Prefix]"
                                    }
                                }
                            ],
                            "dnsSettings": []
                        }
                    }
                }
            }
        },
        {
            "name": "availabilitySets",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2016-09-01",
            "dependsOn": [],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[variables('avsTemplate')]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "avs-settings": {
                        "value": {
                            "mgmt": {
                                "name": "mgmt-avs",
                                "updateCount": 5,
                                "faultCount": 3
                            },
                            "web": {
                                "name": "web-avs",
                                "updateCount": 5,
                                "faultCount": 3
                            },
                            "biz": {
                                "name": "biz-avs",
                                "updateCount": 5,
                                "faultCount": 3
                            },"sql": {
                                "name": "sql-avs",
                                "updateCount": 5,
                                "faultCount": 3
                            },"dc": {
                                "name": "dc-avs",
                                "updateCount": 5,
                                "faultCount": 3
                            }
                        }
                    },
                    "baseUrl": {
                        "value": "[parameters('baseUrl')]"
                    }
                }
            }
        },
        {
            "name": "publicIp",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2016-09-01",
            "dependsOn": [],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[variables('pipTemplate')]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "pip-settings": {
                        "value": {
                            "name": "[variables('pipName')]",
                            "dnsName": "[parameters('pip-settings').dnsName]",
                            "publicIPAllocationMethod": "Dynamic"
                        }
                    }
                }
            }
        },
        {
            "name": "loadBalancers",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2016-09-01",
            "dependsOn": [
                "[resourceId('Microsoft.Resources/deployments', 'publicIp')]"
            ],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[variables('lbTemplate')]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "lb-settings": {
                        "value": {
                            "dnsName": "[parameters('lb-settings').publicIPDnsName]",
                            "ext": {
                                "name": "[variables('extLbName')]",
                                "backendPoolName": "[variables('extLbBackendPoolName')]",
                                "backendPort": "[variables('extLbBackendPort')]",
                                "probeName": "[variables('extLbProbeName')]",
                                "ruleName": "[variables('extLbRuleName')]"
                            },
                            "biz": {
                                "name": "[variables('bizLbName')]",
                                "backendPoolName": "[variables('bizLbBackendPoolName')]",
                                "ipAddress": "[parameters('lb-settings').biz.ipAddress]",
                                "internalPorts": "[parameters('lb-settings').biz.internalPorts]",
                                "probeName": "[variables('bizLbProbeName')]",
                                "ruleName": "[variables('bizLbRuleName')]"
                            },
                            "sql": {
                                "name": "[variables('sqlLbName')]",
                                "backendPoolName": "[variables('sqlLbBackendPoolName')]",
                                "ipAddress": "[parameters('lb-settings').sql.ipAddress]",
                                "internalPorts": "[parameters('lb-settings').sql.internalPorts]",
                                "probeName": "[variables('sqlLbProbeName')]",
                                "ruleName": "[variables('sqlLbRuleName')]"
                            },
                            "newOrExisting": "new",
                            "existingRg": null,
                            "sqlCount": "[parameters('sql-settings').count]",
                            "vmCount": "[parameters('vm-settings').count]"
                        }
                    },
                    "baseUrl": {
                        "value": "[parameters('baseUrl')]"
                    }
                }
            }
        },
        {
            "name": "networkSecurityGroups",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2016-09-01",
            "dependsOn": [
                "[resourceId('Microsoft.Resources/deployments', 'virtualNetwork')]"
            ],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[variables('nsgTemplate')]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "nsg-settings": {
                        "value": {
                            "mgmt": {
                                "name": "mgmt-nsg",
                                "securityRules": [
                                    {
                                        "name": "rdp-allow",
                                        "properties": {
                                            "direction": "Inbound",
                                            "protocol": "TCP",
                                            "sourceAddressPrefix": "*",
                                            "sourcePortRange": "*",
                                            "destinationAddressPrefix": "[parameters('vnet-settings').prefix]",
                                            "destinationPortRange": "3389",
                                            "access": "Allow",
                                            "priority": 100
                                        }
                                    },
                                    {
                                        "name": "vnet-deny",
                                        "properties": {
                                            "direction": "Inbound",
                                            "protocol": "*",
                                            "sourceAddressPrefix": "*",
                                            "sourcePortRange": "*",
                                            "destinationAddressPrefix": "*",
                                            "destinationPortRange": "*",
                                            "access": "Deny",
                                            "priority": 200
                                        }
                                    }
                                ]
                            },
                            "web": {
                                "name": "web-nsg",
                                "securityRules": [
                                    {
                                        "name": "http-allow",
                                        "properties": {
                                            "direction": "Inbound",
                                            "protocol": "TCP",
                                            "sourceAddressPrefix": "*",
                                            "sourcePortRange": "*",
                                            "destinationAddressPrefix": "[parameters('vnet-settings').prefix]",
                                            "destinationPortRange": "80",
                                            "access": "Allow",
                                            "priority": 100
                                        }
                                    },
                                    {
                                        "name": "vnet-allow",
                                        "properties": {
                                            "direction": "Inbound",
                                            "protocol": "TCP",
                                            "sourceAddressPrefix": "[parameters('vnet-settings').prefix]",
                                            "sourcePortRange": "*",
                                            "destinationAddressPrefix": "*",
                                            "destinationPortRange": "80",
                                            "access": "Allow",
                                            "priority": 200
                                        }
                                    },
                                    {
                                        "name": "rdp-allow",
                                        "properties": {
                                            "direction": "Inbound",
                                            "protocol": "TCP",
                                            "sourceAddressPrefix": "[parameters('vnet-settings').subnets.subnet0Prefix]",
                                            "sourcePortRange": "*",
                                            "destinationAddressPrefix": "*",
                                            "destinationPortRange": "3389",
                                            "access": "Allow",
                                            "priority": 300
                                        }
                                    },
                                    {
                                        "name": "vnet-deny",
                                        "properties": {
                                            "direction": "Inbound",
                                            "protocol": "*",
                                            "sourceAddressPrefix": "*",
                                            "sourcePortRange": "*",
                                            "destinationAddressPrefix": "*",
                                            "destinationPortRange": "*",
                                            "access": "Deny",
                                            "priority": 400
                                        }
                                    }
                                ]
                            },
                            "biz": {
                                "name": "biz-nsg",
                                "securityRules": [
                                    {
                                        "name": "web-allow",
                                        "properties": {
                                            "direction": "Inbound",
                                            "protocol": "*",
                                            "sourceAddressPrefix": "[parameters('vnet-settings').subnets.subnet1Prefix]",
                                            "sourcePortRange": "*",
                                            "destinationAddressPrefix": "*",
                                            "destinationPortRange": "*",
                                            "access": "Allow",
                                            "priority": 100
                                        }
                                    },
                                    {
                                        "name": "rdp-allow",
                                        "properties": {
                                            "direction": "Inbound",
                                            "protocol": "TCP",
                                            "sourceAddressPrefix": "[parameters('vnet-settings').subnets.subnet0Prefix]",
                                            "sourcePortRange": "*",
                                            "destinationAddressPrefix": "*",
                                            "destinationPortRange": "3389",
                                            "access": "Allow",
                                            "priority": 200
                                        }
                                    },
                                    {
                                        "name": "vnet-deny",
                                        "properties": {
                                            "direction": "Inbound",
                                            "protocol": "*",
                                            "sourceAddressPrefix": "*",
                                            "sourcePortRange": "*",
                                            "destinationAddressPrefix": "*",
                                            "destinationPortRange": "*",
                                            "access": "Deny",
                                            "priority": 300
                                        }
                                    }
                                ]
                            },
                            "sql": {
                                "name": "sql-nsg",
                                "securityRules": [
                                    {
                                        "name": "biz-allow",
                                        "properties": {
                                            "direction": "Inbound",
                                            "protocol": "*",
                                            "sourceAddressPrefix": "[parameters('vnet-settings').subnets.subnet2Prefix]",
                                            "sourcePortRange": "*",
                                            "destinationAddressPrefix": "*",
                                            "destinationPortRange": "49168",
                                            "access": "Allow",
                                            "priority": 100
                                        }
                                    },
                                    {
                                        "name": "rdp-allow",
                                        "properties": {
                                            "direction": "Inbound",
                                            "protocol": "TCP",
                                            "sourceAddressPrefix": "[parameters('vnet-settings').subnets.subnet0Prefix]",
                                            "sourcePortRange": "*",
                                            "destinationAddressPrefix": "*",
                                            "destinationPortRange": "3389",
                                            "access": "Allow",
                                            "priority": 200
                                        }
                                    },
                                    {
                                        "name": "vnet-deny",
                                        "properties": {
                                            "direction": "Inbound",
                                            "protocol": "*",
                                            "sourceAddressPrefix": "*",
                                            "sourcePortRange": "*",
                                            "destinationAddressPrefix": "*",
                                            "destinationPortRange": "*",
                                            "access": "Deny",
                                            "priority": 300
                                        }
                                    }
                                ]
                            },
                            "dc": {
                                "name": "dc-nsg",
                                "securityRules": [
                                    {
                                        "name": "ntp-allow",
                                        "properties": {
                                            "protocol": "UDP",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "123",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 100,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "rpc-allow",
                                        "properties": {
                                            "protocol": "TCP",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "135",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 110,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "kerberos-allow",
                                        "properties": {
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "464",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 120,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "ldap-allow",
                                        "properties": {
                                            "protocol": "TCP",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "389",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 130,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "ldaps-allow",
                                        "properties": {
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "636",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 140,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "gc-allow",
                                        "properties": {
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "3268",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 150,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "gcs-allow",
                                        "properties": {
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "3269",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 160,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "dns-allow",
                                        "properties": {
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "53",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 170,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "kerberos2-allow",
                                        "properties": {
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "88",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 180,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "smb",
                                        "properties": {
                                            "protocol": "TCP",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "445",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 190,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "dynamic-allow",
                                        "properties": {
                                            "protocol": "TCP",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "49152-65535",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 200,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "rdp-allow",
                                        "properties": {
                                            "direction": "Inbound",
                                            "protocol": "TCP",
                                            "sourceAddressPrefix": "[parameters('vnet-settings').subnets.subnet0Prefix]",
                                            "sourcePortRange": "*",
                                            "destinationAddressPrefix": "*",
                                            "destinationPortRange": "3389",
                                            "access": "Allow",
                                            "priority": 210
                                        }
                                    },
                                    {
                                        "name": "vnet-deny",
                                        "properties": {
                                            "direction": "Inbound",
                                            "protocol": "*",
                                            "sourceAddressPrefix": "*",
                                            "sourcePortRange": "*",
                                            "destinationAddressPrefix": "*",
                                            "destinationPortRange": "*",
                                            "access": "Deny",
                                            "priority": 300
                                        }
                                    }
                                ]
                            }
                        }
                    },
                    "baseUrl": {
                        "value": "[parameters('baseUrl')]"
                    }
                }
            }
        },
        {
            "name": "networkInterfaces",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2016-09-01",
            "dependsOn": [
                "[resourceId('Microsoft.Resources/deployments', 'virtualNetwork')]",
                "[resourceId('Microsoft.Resources/deployments', 'publicIp')]",
                "[resourceId('Microsoft.Resources/deployments', 'networkSecurityGroups')]"
            ],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[variables('nicTemplate')]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "nic-settings": {
                        "value": {
                            "mgmt": {
                                "name": "mgmt-nic",
                                "count": 1,
                                "ipConfigurations": [
                                    {
                                        "name": "ipconfig1",
                                        "properties": {
                                            "privateIPAllocationMethod": "Dynamic",
                                            "subnet": {
                                                "id": "[concat(reference('virtualNetwork').outputs.vnetID.value, '/subnets/', parameters('vnet-settings').subnets.subnet0Name)]"
                                            },
                                            "loadBalancerInboundNatRules": [
                                                {
                                                    "id": "[concat(variables('extLbID'), '/inboundNatRules/nat-rdp-mgmt')]"
                                                }
                                            ]
                                        }
                                    }
                                ],
                                "dnsSettings": {
                                    "dnsServers": []
                                },
                                "enableIPForwarding": false,
                                "networkSecurityGroup": {
                                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'mgmt-nsg')]"
                                }
                            },
                            "web": {
                                "name": "web-nic-",
                                "count": "[parameters('vm-settings').count]",
                                "ipConfigurations": [
                                    {
                                        "name": "ipconfig1",
                                        "properties": {
                                            "privateIPAllocationMethod": "Dynamic",
                                            "subnet": {
                                                "id": "[concat(reference('virtualNetwork').outputs.vnetID.value, '/subnets/', parameters('vnet-settings').subnets.subnet1Name)]"
                                            },
                                            "loadBalancerBackendAddressPools": [
                                                {
                                                    "id": "[variables('extLbBackendPoolID')]"
                                                }
                                            ]
                                        }
                                    }
                                ],
                                "dnsSettings": {
                                    "dnsServers": []
                                },
                                "enableIPForwarding": false,
                                "networkSecurityGroup": {
                                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'web-nsg')]"
                                }
                            },
                            "biz": {
                                "name": "biz-nic-",
                                "count": "[parameters('vm-settings').count]",
                                "ipConfigurations": [
                                    {
                                        "name": "ipconfig1",
                                        "properties": {
                                            "privateIPAllocationMethod": "Dynamic",
                                            "subnet": {
                                                "id": "[concat(reference('virtualNetwork').outputs.vnetID.value, '/subnets/', parameters('vnet-settings').subnets.subnet2Name)]"
                                            }
                                        }
                                    }
                                ],
                                "dnsSettings": {
                                    "dnsServers": []
                                },
                                "enableIPForwarding": false,
                                "networkSecurityGroup": {
                                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'biz-nsg')]"
                                }
                            },
                            "sql": {
                                "name": "sql-nic-",
                                "count": "[parameters('sql-settings').count]",
                                "ipConfigurations": [
                                    {
                                        "name": "ipconfig1",
                                        "properties": {
                                            "privateIPAllocationMethod": "Dynamic",
                                            "subnet": {
                                                "id": "[concat(reference('virtualNetwork').outputs.vnetID.value, '/subnets/', parameters('vnet-settings').subnets.subnet3Name)]"
                                            }
                                        }
                                    }
                                ],
                                "dnsSettings": {
                                    "dnsServers": []
                                },
                                "enableIPForwarding": false,
                                "networkSecurityGroup": {
                                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'sql-nsg')]"
                                }
                            },
                            "dc": {
                                "name": "dc-nic-",
                                "count": 2,
                                "ipConfigurations": [
                                    {
                                        "name": "ipconfig1",
                                        "properties": {
                                            "privateIPAllocationMethod": "Dynamic",
                                            "subnet": {
                                                "id": "[concat(reference('virtualNetwork').outputs.vnetID.value, '/subnets/', parameters('vnet-settings').subnets.subnet4Name)]"
                                            }
                                        }
                                    }
                                ],
                                "dnsSettings": {
                                    "dnsServers": []
                                },
                                "enableIPForwarding": false,
                                "networkSecurityGroup": {
                                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'dc-nsg')]"
                                }
                            },
                            "fsw": {
                                "name": "fsw-nic",
                                "count": 1,
                                "ipConfigurations": [
                                    {
                                        "name": "ipconfig1",
                                        "properties": {
                                            "privateIPAllocationMethod": "Dynamic",
                                            "subnet": {
                                                "id": "[concat(reference('virtualNetwork').outputs.vnetID.value, '/subnets/', parameters('vnet-settings').subnets.subnet3Name)]"
                                            }
                                        }
                                    }
                                ],
                                "dnsSettings": {
                                    "dnsServers": []
                                },
                                "enableIPForwarding": false,
                                "networkSecurityGroup": {
                                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'sql-nsg')]"
                                }
                            }
                        }
                    },
                    "baseUrl": {
                        "value": "[parameters('baseUrl')]"
                    }
                }
            }
        },
        {
            "name": "virtualMachines",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2016-09-01",
            "dependsOn": [
                "[resourceId('Microsoft.Resources/deployments', 'storageAccounts')]",
                "[resourceId('Microsoft.Resources/deployments', 'networkInterfaces')]"
            ],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[variables('vmTemplate')]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "storage-settings": {
                        "value":  {
                            "mgmt": {
                                "name": "[parameters('storage-settings').mgmt.accounts[0]]",
                                "accountType": "[parameters('storage-settings').mgmt.accountType]",
                                "newOrExisting": "[parameters('storage-settings').mgmt.newOrExisting]",
                                "existingRg": "[parameters('storage-settings').mgmt.existingRg]"
                            },
                            "web": {
                                "name": "[parameters('storage-settings').web.accounts[variables('math').modulo2[copyIndex()]]]",
                                "accountType": "[parameters('storage-settings').web.accountType]",
                                "newOrExisting": "[parameters('storage-settings').web.newOrExisting]",
                                "existingRg": "[parameters('storage-settings').web.existingRg]"
                            },
                            "biz": {
                                "name": "[parameters('storage-settings').biz.accounts[variables('math').modulo2[copyIndex()]]]",
                                "accountType": "[parameters('storage-settings').biz.accountType]",
                                "newOrExisting": "[parameters('storage-settings').biz.newOrExisting]",
                                "existingRg": "[parameters('storage-settings').biz.existingRg]"
                            },
                            "sql": {
                                "name": "[parameters('storage-settings').sql.accounts[variables('math').modulo2[copyIndex()]]]",
                                "accountType": "[parameters('storage-settings').sql.accountType]",
                                "newOrExisting": "[parameters('storage-settings').sql.newOrExisting]",
                                "existingRg": "[parameters('storage-settings').sql.existingRg]"
                            },
                            "dc": {
                                "name": "[parameters('storage-settings').dc.accounts[variables('math').modulo2[copyIndex()]]]",
                                "accountType": "[parameters('storage-settings').dc.accountType]",
                                "newOrExisting": "[parameters('storage-settings').dc.newOrExisting]",
                                "existingRg": "[parameters('storage-settings').dc.existingRg]"
                            },
                            "fsw": {
                                "name": "[parameters('storage-settings').fsw.accounts[0]]",
                                "accountType": "[parameters('storage-settings').fsw.accountType]",
                                "newOrExisting": "[parameters('storage-settings').fsw.newOrExisting]",
                                "existingRg": "[parameters('storage-settings').fsw.existingRg]"
                            }
                        }
                    },
                    "vm-settings": {
                        "value": {
                            "mgmt": {
                                "name": "mgmt-vm",
                                "adminUserName": "[parameters('vm-settings').adminUserName]",
                                "adminPassword": "[parameters('vm-settings').adminPassword]",
                                "avsID": "[resourceId('Microsoft.Compute/availabilitySets', 'mgmt-avs')]",
                                "imagePublisher": "[variables('vmOS')[parameters('vm-settings').type][0]]",
                                "imageOffer": "[variables('vmOS')[parameters('vm-settings').type][1]]",
                                "imageSku": "[variables('vmOS')[parameters('vm-settings').type][2]]",
                                "nicName": "mgmt-nic",
                                "vmSize": "Standard_D2_v2",
                                "storageAccountContainerName": "[toLower(concat(resourceGroup().name, '-', uniqueString(resourceGroup().id, deployment().name)))]"
                            },
                            "web": {
                                "name": "web-vm-",
                                "count": "[parameters('vm-settings').count]",
                                "adminUserName": "[parameters('vm-settings').adminUserName]",
                                "adminPassword": "[parameters('vm-settings').adminPassword]",
                                "avsID": "[resourceId('Microsoft.Compute/availabilitySets', 'web-avs')]",
                                "imagePublisher": "[variables('vmOS')[parameters('vm-settings').type][0]]",
                                "imageOffer": "[variables('vmOS')[parameters('vm-settings').type][1]]",
                                "imageSku": "[variables('vmOS')[parameters('vm-settings').type][2]]",
                                "nicName": "web-nic-",
                                "vmSize": "Standard_D2_v2",
                                "storageAccountContainerName": "[toLower(concat(resourceGroup().name, '-', uniqueString(resourceGroup().id, deployment().name)))]"
                            },
                            "biz": {
                                "name": "biz-vm-",
                                "count": "[parameters('vm-settings').count]",
                                "adminUserName": "[parameters('vm-settings').adminUserName]",
                                "adminPassword": "[parameters('vm-settings').adminPassword]",
                                "avsID": "[resourceId('Microsoft.Compute/availabilitySets', 'biz-avs')]",
                                "imagePublisher": "[variables('vmOS')[parameters('vm-settings').type][0]]",
                                "imageOffer": "[variables('vmOS')[parameters('vm-settings').type][1]]",
                                "imageSku": "[variables('vmOS')[parameters('vm-settings').type][2]]",
                                "nicName": "biz-nic-",
                                "vmSize": "Standard_D2_v2",
                                "storageAccountContainerName": "[toLower(concat(resourceGroup().name, '-', uniqueString(resourceGroup().id, deployment().name)))]"
                            },
                            "sql": {
                                "name": "sql-vm-",
                                "count": "[parameters('sql-settings').count]",
                                "adminUserName": "[parameters('vm-settings').adminUserName]",
                                "adminPassword": "[parameters('vm-settings').adminPassword]",
                                "avsID": "[resourceId('Microsoft.Compute/availabilitySets', 'sql-avs')]",
                                "imagePublisher": "[variables('vmOS')[parameters('sql-settings').type][0]]",
                                "imageOffer": "[variables('vmOS')[parameters('sql-settings').type][1]]",
                                "imageSku": "[variables('vmOS')[parameters('sql-settings').type][2]]",
                                "nicName": "sql-nic-",
                                "vmSize": "Standard_DS4_v2",
                                "storageAccountContainerName": "[toLower(concat(resourceGroup().name, '-', uniqueString(resourceGroup().id, deployment().name)))]"
                            },
                            "dc": {
                                "name": "dc-vm-",
                                "adminUserName": "[parameters('vm-settings').adminUserName]",
                                "adminPassword": "[parameters('vm-settings').adminPassword]",
                                "avsID": "[resourceId('Microsoft.Compute/availabilitySets', 'dc-avs')]",
                                "imagePublisher": "[variables('vmOS')[parameters('vm-settings').type][0]]",
                                "imageOffer": "[variables('vmOS')[parameters('vm-settings').type][1]]",
                                "imageSku": "[variables('vmOS')[parameters('vm-settings').type][2]]",
                                "nicName": "dc-nic-",
                                "vmSize": "Standard_D2_v2",
                                "storageAccountContainerName": "[toLower(concat(resourceGroup().name, '-', uniqueString(resourceGroup().id, deployment().name)))]"
                            },
                            "fsw": {
                                "name": "fsw-vm",
                                "adminUserName": "[parameters('vm-settings').adminUserName]",
                                "adminPassword": "[parameters('vm-settings').adminPassword]",
                                "avsID": "[resourceId('Microsoft.Compute/availabilitySets', 'sql-avs')]",
                                "imagePublisher": "[variables('vmOS')[parameters('vm-settings').type][0]]",
                                "imageOffer": "[variables('vmOS')[parameters('vm-settings').type][1]]",
                                "imageSku": "[variables('vmOS')[parameters('vm-settings').type][2]]",
                                "nicName": "fsw-nic",
                                "vmSize": "Standard_D2_v2",
                                "storageAccountContainerName": "[toLower(concat(resourceGroup().name, '-', uniqueString(resourceGroup().id, deployment().name)))]"
                            }
                        }
                    },
                    "baseUrl": {
                        "value": "[parameters('baseUrl')]"
                    }
                }
            }
        }
    ],
    "outputs": {}
}
